--- a/flask/flask_blog/templates/layout.html
+++ b/flask/flask_blog/templates/layout.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-     <!--Let browser know website is optimized for mobile-->
-     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     {% if title %}
         <title> Flask Blog - {{ title }} </title>
     {% else %}
@@ -13,8 +12,7 @@
     {% endif %}
 </head>
 <body>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <div class="container-fluid">
+    <div class="container">
         {% block content %}
         {% endblock %}
     </div>
