--- a/django_api/AirQualityIndex/AirQuality/templates/about.html
+++ b/django_api/AirQualityIndex/AirQuality/templates/about.html
@@ -1,9 +1,17 @@
 {% extends 'base.html' %}
-
-
-
-
 {% block content %}
-<h1>about</h1>
-{{ api }}
+<div class="container">
+  <br>
+<div class="row">
+  <div class="col-sm">
+  </div>
+  <div class="col-sm">
+    <h4>
+      This website is using NewsAPI and fetching data from that API.
+    </h4>
+  </div>
+  <div class="col-sm">
+  </div>
+</div>
+</div>
 {% endblock %}
