--- a/django_api/AirQualityIndex/AirQuality/templates/home.html
+++ b/django_api/AirQualityIndex/AirQuality/templates/home.html
@@ -22,7 +22,7 @@
       <h6><li class="list-group-item">Country: {{ i.country }}</li></h6>
     </ul>
     <br>
-    <a href="{{ i.id }}" class="btn btn-primary">Go somewhere</a>
+    <a href="{{ i.id }}" class="btn btn-primary">Get news from {{ i.name }}</a>
 
   </div>
 </div>
